--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -37,8 +37,8 @@ jobs:
       - name: Verify Ansible is accessible in the built image
         run: docker exec --tty test-container env TERM=xterm ansible --version
 
-  release:
-    name: Release
+  tag-release:
+    name: Release for tags
     runs-on: ubuntu-latest
     needs: test
 
@@ -81,3 +81,33 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: kirillzak/docker-alpine-ansible:${{ matrix.version_branch }}.${{ matrix.version_minor_release }}
+
+  latest-release:
+    name: Release
+    runs-on: ubuntu-latest
+    needs: test
+
+    steps:
+      - name: Checkout out the codebase
+        uses: actions/checkout@v3
+
+      - name: Add Qemu
+        uses: docker/setup-qemu-action@v2
+
+      - name: Add Docker BuildX
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub Registry
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_TOKEN }}
+
+      - name: Build and push image
+        uses: docker/build-push-action@v3
+        with:
+          context: ./
+          file: ./alpine3.16/Dockerfile
+          platforms: linux/amd64
+          push: true
+          tags: kirillzak/docker-alpine-ansible:latest
