--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16]
+        version_branch: [3.16, 3.17]
         version_minor_release: [0]
         include:
           - version_branch: 3.16
