--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16]
+        version_branch: [3.16, 3.17]
         version_minor_release: [0]
         include:
           - version_branch: 3.16
@@ -46,7 +46,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16]
+        version_branch: [3.16, 3.17]
         version_minor_release: [0]
         include:
           - version_branch: 3.16
@@ -106,9 +106,9 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v3
         with:
-          build-args: ALPINE_VERSION=3.16.3
+          build-args: ALPINE_VERSION=3.17.0
           context: ./
-          file: ./alpine3.16/Dockerfile
+          file: ./alpine3.17/Dockerfile
           platforms: linux/amd64
           push: true
           tags: kirillzak/docker-alpine-ansible:latest
