--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,6 +23,8 @@ jobs:
             version_minor_release: 2
           - version_branch: 3.16
             version_minor_release: 3
+          - version_branch: 3.16
+            version_minor_release: 4
 
     steps:
       - name: Checkout out the codebase
@@ -55,6 +57,8 @@ jobs:
             version_minor_release: 2
           - version_branch: 3.16
             version_minor_release: 3
+          - version_branch: 3.16
+            version_minor_release: 4
 
     steps:
       - name: Checkout out the codebase
