--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,8 @@ jobs:
             version_minor_release: 2
           - version_branch: 3.16
             version_minor_release: 3
+          - version_branch: 3.16
+            version_minor_release: 4
 
     steps:
       - name: Checkout out the codebase
