--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,8 @@ jobs:
             version_minor_release: 4
           - version_branch: 3.17
             version_minor_release: 1
+          - version_branch: 3.17
+            version_minor_release: 2
 
     steps:
       - name: Checkout out the codebase
