--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -115,8 +115,8 @@ jobs:
             kirillzak/docker-alpine-ansible:${{ matrix.version_branch }}.${{ matrix.version_minor_release }}
             ${{ GHCR_REGISTRY }}/${{ github.repository }}:${{ matrix.version_branch }}.${{ matrix.version_minor_release }}
 
-  docker-hub-latest-release:
-    name: Docker Hub latest release
+  latest-release:
+    name: Latest release
     runs-on: ubuntu-latest
     needs: test
 
