Remove ARM64 version

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -106,7 +106,7 @@ jobs:
           build-args: ALPINE_VERSION=${{ matrix.version_branch }}.${{ matrix.version_minor_release }}
           context: ./
           file: ./alpine${{ matrix.version_branch }}/Dockerfile
-          platforms: linux/amd64,linux/arm64
+          platforms: linux/amd64
           push: true
           tags: |
             kirillzak/docker-alpine-ansible:${{ matrix.version_branch }}.${{ matrix.version_minor_release }}
@@ -146,6 +146,7 @@ jobs:
           build-args: ALPINE_VERSION=3.17.2
           context: ./
           file: ./alpine3.17/Dockerfile
+          platforms: linux/amd64
           push: true
           tags: |
             kirillzak/docker-alpine-ansible:latest
