--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,8 @@ jobs:
             version_minor_release: 3
           - version_branch: 3.16
             version_minor_release: 4
+          - version_branch: 3.16
+            version_minor_release: 5
           - version_branch: 3.17
             version_minor_release: 1
           - version_branch: 3.17
@@ -72,6 +74,8 @@ jobs:
             version_minor_release: 3
           - version_branch: 3.16
             version_minor_release: 4
+          - version_branch: 3.16
+            version_minor_release: 5
           - version_branch: 3.17
             version_minor_release: 1
           - version_branch: 3.17
