--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,8 @@ jobs:
             version_minor_release: 1
           - version_branch: 3.17
             version_minor_release: 2
+          - version_branch: 3.17
+            version_minor_release: 3
 
     steps:
       - name: Checkout out the codebase
