--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,8 @@ jobs:
             version_minor_release: 1
           - version_branch: 3.17
             version_minor_release: 2
+          - version_branch: 3.17
+            version_minor_release: 3
 
     steps:
       - name: Checkout out the codebase
@@ -80,6 +82,8 @@ jobs:
             version_minor_release: 1
           - version_branch: 3.17
             version_minor_release: 2
+          - version_branch: 3.17
+            version_minor_release: 3
 
     steps:
       - name: Checkout out the codebase
@@ -147,7 +151,7 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v3
         with:
-          build-args: ALPINE_VERSION=3.17.2
+          build-args: ALPINE_VERSION=3.17.3
           context: ./
           file: ./alpine3.17/Dockerfile
           platforms: linux/amd64
