Add support for AlpineLinux 3.18.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,12 +15,22 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16, 3.17]
+        version_branch: [3.16, 3.17, 3.18]
         version_minor_release: [0, 1, 2, 3, 4, 5]
         exclude:
           - version_branch: 3.17
             version_minor_release: 4
           - version_branch: 3.17
+            version_minor_release: 5
+          - version_branch: 3.18
+            version_minor_release: 1
+          - version_branch: 3.18
+            version_minor_release: 2
+          - version_branch: 3.18
+            version_minor_release: 3
+          - version_branch: 3.18
+            version_minor_release: 4
+          - version_branch: 3.18
             version_minor_release: 5
 
     steps:
