--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,12 +16,14 @@ jobs:
 
       matrix:
         version_branch: [3.16, 3.17, 3.18]
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
         exclude:
           - version_branch: 3.17
             version_minor_release: 5
           - version_branch: 3.17
             version_minor_release: 6
+          - version_branch: 3.17
+            version_minor_release: 7
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -32,6 +34,8 @@ jobs:
             version_minor_release: 5
           - version_branch: 3.18
             version_minor_release: 6
+          - version_branch: 3.18
+            version_minor_release: 7
 
     steps:
       - name: Checkout out the codebase
