--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,12 +20,14 @@ jobs:
 
       matrix:
         version_branch: [3.16, 3.17, 3.18]
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
         exclude:
           - version_branch: 3.17
             version_minor_release: 5
           - version_branch: 3.17
             version_minor_release: 6
+          - version_branch: 3.17
+            version_minor_release: 7
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -36,6 +38,8 @@ jobs:
             version_minor_release: 5
           - version_branch: 3.18
             version_minor_release: 6
+          - version_branch: 3.18
+            version_minor_release: 7
 
     steps:
       - name: Checkout out the codebase
@@ -64,12 +68,14 @@ jobs:
 
       matrix:
         version_branch: [3.16, 3.17, 3.18]
-        version_minor_release: [0, 1, 2, 3, 4, 5]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
         exclude:
           - version_branch: 3.17
             version_minor_release: 5
           - version_branch: 3.17
             version_minor_release: 6
+          - version_branch: 3.17
+            version_minor_release: 7
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -80,6 +86,8 @@ jobs:
             version_minor_release: 5
           - version_branch: 3.18
             version_minor_release: 6
+          - version_branch: 3.18
+            version_minor_release: 7
 
     steps:
       - name: Checkout out the codebase
