--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16, 3.17, 3.18]
+        version_branch: [3.16, 3.17, 3.18, 3.19]
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
         exclude:
           - version_branch: 3.17
@@ -29,6 +29,20 @@ jobs:
           - version_branch: 3.18
             version_minor_release: 6
           - version_branch: 3.18
+            version_minor_release: 7
+          - version_branch: 3.19
+            version_minor_release: 1
+          - version_branch: 3.19
+            version_minor_release: 2
+          - version_branch: 3.19
+            version_minor_release: 3
+          - version_branch: 3.19
+            version_minor_release: 4
+          - version_branch: 3.19
+            version_minor_release: 5
+          - version_branch: 3.19
+            version_minor_release: 6
+          - version_branch: 3.19
             version_minor_release: 7
 
     steps:
