--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16, 3.17, 3.18]
+        version_branch: [3.16, 3.17, 3.18, 3.19]
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
         exclude:
           - version_branch: 3.17
@@ -33,6 +33,20 @@ jobs:
           - version_branch: 3.18
             version_minor_release: 6
           - version_branch: 3.18
+            version_minor_release: 7
+          - version_branch: 3.19
+            version_minor_release: 1
+          - version_branch: 3.19
+            version_minor_release: 2
+          - version_branch: 3.19
+            version_minor_release: 3
+          - version_branch: 3.19
+            version_minor_release: 4
+          - version_branch: 3.19
+            version_minor_release: 5
+          - version_branch: 3.19
+            version_minor_release: 6
+          - version_branch: 3.19
             version_minor_release: 7
 
     steps:
@@ -61,7 +75,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16, 3.17, 3.18]
+        version_branch: [3.16, 3.17, 3.18, 3.19]
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
         exclude:
           - version_branch: 3.17
@@ -75,6 +89,20 @@ jobs:
           - version_branch: 3.18
             version_minor_release: 6
           - version_branch: 3.18
+            version_minor_release: 7
+          - version_branch: 3.19
+            version_minor_release: 1
+          - version_branch: 3.19
+            version_minor_release: 2
+          - version_branch: 3.19
+            version_minor_release: 3
+          - version_branch: 3.19
+            version_minor_release: 4
+          - version_branch: 3.19
+            version_minor_release: 5
+          - version_branch: 3.19
+            version_minor_release: 6
+          - version_branch: 3.19
             version_minor_release: 7
 
     steps:
@@ -143,9 +171,9 @@ jobs:
       - name: Build and push image
         uses: docker/build-push-action@v3
         with:
-          build-args: ALPINE_VERSION=3.18.4
+          build-args: ALPINE_VERSION=3.19.0
           context: ./
-          file: ./alpine3.18/Dockerfile
+          file: ./alpine3.19/Dockerfile
           platforms: linux/amd64
           push: true
           tags: |
