--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,9 +79,6 @@ jobs:
       fail-fast: false
 
       matrix:
-        platform:
-          - linux/386
-          - linux/amd64
         version_branch: [3.16, 3.17, 3.18, 3.19]
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
         exclude:
@@ -148,7 +145,7 @@ jobs:
           build-args: ALPINE_VERSION=${{ matrix.version_branch }}.${{ matrix.version_minor_release }}
           context: ./
           file: ./alpine${{ matrix.version_branch }}/Dockerfile
-          platforms: ${{ matrix.platform }}
+          platforms: linux/386,linux/amd64
           labels: ${{ steps.meta.outputs.labels }}
           push: true
           tags: |
@@ -173,14 +170,6 @@ jobs:
     name: Latest release
     runs-on: ubuntu-latest
     needs: test
-
-    strategy: 
-      fail-fast: false
-
-      matrix:
-        platform:
-          - linux/386
-          - linux/amd64
 
     steps:
       - name: Checkout out the codebase
@@ -211,7 +200,7 @@ jobs:
           build-args: ALPINE_VERSION=3.19.0
           context: ./
           file: ./alpine3.19/Dockerfile
-          platforms: ${{ matrix.platform }}
+          platforms: linux/386,linux/amd64
           push: true
           tags: |
             kirillzak/docker-alpine-ansible:latest
