--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,12 +20,14 @@ jobs:
           - linux/ppc64le
           - linux/s390x
         version_branch: [3.16, 3.17, 3.18, 3.19]
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
         exclude:
           - version_branch: 3.17
             version_minor_release: 6
           - version_branch: 3.17
             version_minor_release: 7
+          - version_branch: 3.17
+            version_minor_release: 8
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -34,6 +36,8 @@ jobs:
             version_minor_release: 6
           - version_branch: 3.18
             version_minor_release: 7
+          - version_branch: 3.18
+            version_minor_release: 8
           - version_branch: 3.19
             version_minor_release: 1
           - version_branch: 3.19
@@ -48,6 +52,8 @@ jobs:
             version_minor_release: 6
           - version_branch: 3.19
             version_minor_release: 7
+          - version_branch: 3.19
+            version_minor_release: 8
 
     steps:
       - name: Checkout out the codebase
