--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,12 +17,14 @@ jobs:
 
       matrix:
         version_branch: [3.16, 3.17, 3.18, 3.19]
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
         exclude:
           - version_branch: 3.17
             version_minor_release: 6
           - version_branch: 3.17
             version_minor_release: 7
+          - version_branch: 3.17
+            version_minor_release: 8
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -31,6 +33,8 @@ jobs:
             version_minor_release: 6
           - version_branch: 3.18
             version_minor_release: 7
+          - version_branch: 3.18
+            version_minor_release: 8
           - version_branch: 3.19
             version_minor_release: 1
           - version_branch: 3.19
@@ -45,6 +49,8 @@ jobs:
             version_minor_release: 6
           - version_branch: 3.19
             version_minor_release: 7
+          - version_branch: 3.19
+            version_minor_release: 8
 
     steps:
       - name: Checkout out the codebase
