--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,12 +24,14 @@ jobs:
 
       matrix:
         version_branch: [3.16, 3.17, 3.18, 3.19]
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
         exclude:
           - version_branch: 3.17
             version_minor_release: 6
           - version_branch: 3.17
             version_minor_release: 7
+          - version_branch: 3.17
+            version_minor_release: 8
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -38,6 +40,8 @@ jobs:
             version_minor_release: 6
           - version_branch: 3.18
             version_minor_release: 7
+          - version_branch: 3.18
+            version_minor_release: 8
           - version_branch: 3.19
             version_minor_release: 1
           - version_branch: 3.19
@@ -52,6 +56,8 @@ jobs:
             version_minor_release: 6
           - version_branch: 3.19
             version_minor_release: 7
+          - version_branch: 3.19
+            version_minor_release: 8
 
     steps:
       - name: Checkout out the codebase
@@ -80,12 +86,14 @@ jobs:
 
       matrix:
         version_branch: [3.16, 3.17, 3.18, 3.19]
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
         exclude:
           - version_branch: 3.17
             version_minor_release: 6
           - version_branch: 3.17
             version_minor_release: 7
+          - version_branch: 3.17
+            version_minor_release: 8
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -94,6 +102,8 @@ jobs:
             version_minor_release: 6
           - version_branch: 3.18
             version_minor_release: 7
+          - version_branch: 3.18
+            version_minor_release: 8
           - version_branch: 3.19
             version_minor_release: 1
           - version_branch: 3.19
@@ -108,6 +118,8 @@ jobs:
             version_minor_release: 6
           - version_branch: 3.19
             version_minor_release: 7
+          - version_branch: 3.19
+            version_minor_release: 8
 
     steps:
       - name: Checkout out the codebase
