--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
 
       matrix:
         version_branch: [3.16, 3.17, 3.18, 3.19]
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
         exclude:
           - version_branch: 3.17
             version_minor_release: 6
@@ -25,6 +25,8 @@ jobs:
             version_minor_release: 7
           - version_branch: 3.17
             version_minor_release: 8
+          - version_branch: 3.17
+            version_minor_release: 9
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -35,6 +37,8 @@ jobs:
             version_minor_release: 7
           - version_branch: 3.18
             version_minor_release: 8
+          - version_branch: 3.18
+            version_minor_release: 9
           - version_branch: 3.19
             version_minor_release: 1
           - version_branch: 3.19
@@ -51,6 +55,8 @@ jobs:
             version_minor_release: 7
           - version_branch: 3.19
             version_minor_release: 8
+          - version_branch: 3.19
+            version_minor_release: 9
 
     steps:
       - name: Checkout out the codebase
