--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
 
       matrix:
         version_branch: [3.16, 3.17, 3.18, 3.19]
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
         exclude:
           - version_branch: 3.17
             version_minor_release: 6
@@ -32,6 +32,8 @@ jobs:
             version_minor_release: 7
           - version_branch: 3.17
             version_minor_release: 8
+          - version_branch: 3.17
+            version_minor_release: 9
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -42,6 +44,8 @@ jobs:
             version_minor_release: 7
           - version_branch: 3.18
             version_minor_release: 8
+          - version_branch: 3.18
+            version_minor_release: 9
           - version_branch: 3.19
             version_minor_release: 1
           - version_branch: 3.19
@@ -58,6 +62,8 @@ jobs:
             version_minor_release: 7
           - version_branch: 3.19
             version_minor_release: 8
+          - version_branch: 3.19
+            version_minor_release: 9
 
     steps:
       - name: Checkout out the codebase
@@ -86,7 +92,7 @@ jobs:
 
       matrix:
         version_branch: [3.16, 3.17, 3.18, 3.19]
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
         exclude:
           - version_branch: 3.17
             version_minor_release: 6
@@ -94,6 +100,8 @@ jobs:
             version_minor_release: 7
           - version_branch: 3.17
             version_minor_release: 8
+          - version_branch: 3.17
+            version_minor_release: 9
           - version_branch: 3.18
             version_minor_release: 1
           - version_branch: 3.18
@@ -104,6 +112,8 @@ jobs:
             version_minor_release: 7
           - version_branch: 3.18
             version_minor_release: 8
+          - version_branch: 3.18
+            version_minor_release: 9
           - version_branch: 3.19
             version_minor_release: 1
           - version_branch: 3.19
@@ -120,6 +130,8 @@ jobs:
             version_minor_release: 7
           - version_branch: 3.19
             version_minor_release: 8
+          - version_branch: 3.19
+            version_minor_release: 9
 
     steps:
       - name: Checkout out the codebase
