--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
           - linux/arm64/v8
           - linux/ppc64le
           - linux/s390x
-        version_branch: [3.16]
+        version_branch: ['3.16']
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
     steps:
@@ -63,7 +63,7 @@ jobs:
           - linux/arm64/v8
           - linux/ppc64le
           - linux/s390x
-        version_branch: [3.17]
+        version_branch: ['3.17']
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
 
     steps:
@@ -107,7 +107,7 @@ jobs:
           - linux/arm64/v8
           - linux/ppc64le
           - linux/s390x
-        version_branch: [3.18]
+        version_branch: ['3.18']
         version_minor_release: [0, 2, 3, 4, 5, 6]
 
     steps:
@@ -151,7 +151,7 @@ jobs:
           - linux/arm64/v8
           - linux/ppc64le
           - linux/s390x
-        version_branch: [3.19]
+        version_branch: ['3.19']
         version_minor_release: [0, 1]
 
     steps:
@@ -195,7 +195,7 @@ jobs:
           - linux/arm64/v8
           - linux/ppc64le
           - linux/s390x
-        version_branch: [3.20]
+        version_branch: ['3.20']
         version_minor_release: [0]
 
     steps:
