--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16]
+        version_branch: ['3.16']
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
     steps:
@@ -40,7 +40,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.17]
+        version_branch: ['3.17']
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
 
     steps:
@@ -64,7 +64,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.18]
+        version_branch: ['3.18']
         version_minor_release: [0, 2, 3, 4, 5, 6]
 
     steps:
@@ -88,7 +88,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.19]
+        version_branch: ['3.19']
         version_minor_release: [0, 1]
 
     steps:
@@ -112,7 +112,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.20]
+        version_branch: ['3.20']
         version_minor_release: [0]
 
     steps:
