--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16]
+        version_branch: ['3.16']
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
     steps:
@@ -43,7 +43,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.17]
+        version_branch: ['3.17']
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
 
     steps:
@@ -67,7 +67,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.18]
+        version_branch: ['3.18']
         version_minor_release: [0, 2, 3, 4, 5, 6]
 
     steps:
@@ -91,7 +91,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.19]
+        version_branch: ['3.19']
         version_minor_release: [0, 1]
 
     steps:
@@ -115,7 +115,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.20]
+        version_branch: ['3.20']
         version_minor_release: [0]
 
     steps:
@@ -144,7 +144,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.16]
+        version_branch: ['3.16']
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
 
     steps:
@@ -217,7 +217,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.17]
+        version_branch: ['3.17']
         version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7]
 
     steps:
@@ -290,7 +290,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.18]
+        version_branch: ['3.18']
         version_minor_release: [0, 2, 3, 4, 5, 6]
 
     steps:
@@ -363,7 +363,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.19]
+        version_branch: ['3.19']
         version_minor_release: [0, 1]
 
     steps:
@@ -436,7 +436,7 @@ jobs:
       fail-fast: false
 
       matrix:
-        version_branch: [3.20]
+        version_branch: ['3.20']
         version_minor_release: [0]
 
     steps:
