--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -499,7 +499,12 @@ jobs:
   latest-release:
     name: Latest release
     runs-on: ubuntu-latest
-    needs: test
+    needs: 
+      - test-3-16
+      - test-3-17
+      - test-3-18
+      - test-3-19
+      - test-3-20
 
     steps:
       - name: Checkout out the codebase
