--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -64,7 +64,7 @@ jobs:
           - linux/ppc64le
           - linux/s390x
         version_branch: ['3.17']
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 
     steps:
       - name: Checkout out the codebase
