--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
 
       matrix:
         version_branch: ['3.17']
-        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
 
     steps:
       - name: Checkout out the codebase
