--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,7 @@ jobs:
 
       matrix:
         version_branch: ['3.18']
-        version_minor_release: [0, 2, 3, 4, 5, 6, 7, 8]
+        version_minor_release: [0, 2, 3, 4, 5, 6, 7, 8, 9]
 
     steps:
       - name: Checkout out the codebase
@@ -293,7 +293,7 @@ jobs:
 
       matrix:
         version_branch: ['3.18']
-        version_minor_release: [0, 2, 3, 4, 5, 6, 7, 8]
+        version_minor_release: [0, 2, 3, 4, 5, 6, 7, 8, 9]
 
     steps:
       - name: Checkout out the codebase
