--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
 
       matrix:
         version_branch: ['3.19']
-        version_minor_release: [0, 1]
+        version_minor_release: [0, 1, 2]
 
     steps:
       - name: Checkout out the codebase
