feat: Add support for Alpine Linux 3.19.3

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,7 +92,7 @@ jobs:
 
       matrix:
         version_branch: ['3.19']
-        version_minor_release: [0, 1, 2]
+        version_minor_release: [0, 1, 2, 3]
 
     steps:
       - name: Checkout out the codebase
@@ -367,7 +367,7 @@ jobs:
 
       matrix:
         version_branch: ['3.19']
-        version_minor_release: [0, 1, 2]
+        version_minor_release: [0, 1, 2, 3]
 
     steps:
       - name: Checkout out the codebase
