--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -116,7 +116,7 @@ jobs:
 
       matrix:
         version_branch: ['3.20']
-        version_minor_release: [0, 1, 2]
+        version_minor_release: [0, 1, 2, 3]
 
     steps:
       - name: Checkout out the codebase
@@ -441,7 +441,7 @@ jobs:
 
       matrix:
         version_branch: ['3.20']
-        version_minor_release: [0, 1, 2]
+        version_minor_release: [0, 1, 2, 3]
 
     steps:
       - name: Checkout out the codebase
@@ -544,7 +544,7 @@ jobs:
         id: build
         uses: docker/build-push-action@v6
         with:
-          build-args: ALPINE_VERSION=3.20.2
+          build-args: ALPINE_VERSION=3.20.3
           context: ./
           file: ./alpine3.20/Dockerfile
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
