--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -68,7 +68,7 @@ jobs:
 
       matrix:
         version_branch: ['3.19']
-        version_minor_release: [0, 1, 2, 3, 4, 5]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6]
 
     steps:
       - name: Checkout out the codebase
@@ -293,7 +293,7 @@ jobs:
 
       matrix:
         version_branch: ['3.19']
-        version_minor_release: [0, 1, 2, 3, 4, 5]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6]
 
     steps:
       - name: Checkout out the codebase
