--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,7 +89,7 @@ jobs:
 
       matrix:
         version_branch: ['3.20']
-        version_minor_release: [0, 1, 2, 3, 4]
+        version_minor_release: [0, 1, 2, 3, 4, 5]
 
     steps:
       - name: Checkout out the codebase
