--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -152,7 +152,7 @@ jobs:
           - linux/ppc64le
           - linux/s390x
         version_branch: ['3.20']
-        version_minor_release: [0, 1, 2, 3, 4, 5]
+        version_minor_release: [0, 1, 2, 3, 4, 5, 6]
 
     steps:
       - name: Checkout out the codebase
