feat: added support for AlpineLinux v3.22.1

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -140,7 +140,7 @@ jobs:
 
       matrix:
         version_branch: ['3.22']
-        version_minor_release: [0]
+        version_minor_release: [0, 1]
 
     steps:
       - name: Checkout out the codebase
@@ -539,7 +539,7 @@ jobs:
 
       matrix:
         version_branch: ['3.22']
-        version_minor_release: [0]
+        version_minor_release: [0, 1]
 
     steps:
       - name: Checkout out the codebase
@@ -643,7 +643,7 @@ jobs:
         id: build
         uses: docker/build-push-action@v6
         with:
-          build-args: ALPINE_VERSION=3.22.0
+          build-args: ALPINE_VERSION=3.22.1
           context: ./
           file: ./alpine3.22/Dockerfile
           platforms: linux/386,linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
