--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -241,7 +241,7 @@ jobs:
           - linux/ppc64le
           - linux/s390x
         version_branch: ['3.22']
-        version_minor_release: [0]
+        version_minor_release: [0, 1]
 
     steps:
       - name: Checkout out the codebase
