--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,7 +137,7 @@ jobs:
 
       matrix:
         version_branch: ['3.22']
-        version_minor_release: [0]
+        version_minor_release: [0, 1]
 
     steps:
       - name: Checkout out the codebase
